# ZOS-Virtual-File-System

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: commands.c  commands.h  constants.h  general_header.h  main.c  main.h  output_message.h  return_values.h  structures.h  utilities.c  utilities.h  vfs.c  vfs.h
